--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -160,7 +160,7 @@
       display: block;
       border-bottom: 1px solid var(--txt-grey);
       transform: rotate(90deg);
-      width: 48px;
+      width: 40px;
       top: 60px;
       left: -28px;
     }
@@ -169,19 +169,32 @@
       & .container {
         align-items: center;
         display: flex;
-        justify-content: space-between;
+        flex-direction: row;
       }
-    }
-    &-black .container {
-      justify-content: flex-start;
+      &-black .container {
+        justify-content: flex-start;
+      }
     }
     &-callme {
       margin-bottom: 0;
     }
   }
-  .phone-groupe {
-    flex-direction: row;
-    align-items: center;
+  .phone {
+    width: 24px;
+    height: 23px;
+    &-groupe {
+      flex-direction: row;
+    }
+    &-number {
+      @include font(600, 20px, 1.2, 0.08em);
+    }
+  }
+  .logo {
+    width: 128px;
+    height: 45px;
+    &-footer {
+      margin: 0 203px 0 0;
+    }
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
@@ -274,6 +287,5 @@
   }
   .phone-groupe {
     flex-direction: row;
-    align-items: center;
   }
 }
