--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1815,7 +1815,7 @@ a {
     border-bottom: 1px solid var(--txt-grey);
     -webkit-transform: rotate(90deg);
             transform: rotate(90deg);
-    width: 48px;
+    width: 40px;
     top: 60px;
     left: -28px;
   }
@@ -1829,11 +1829,12 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
-  .footer-black .container {
+  .footer-white-black .container {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
@@ -1842,14 +1843,29 @@ a {
     margin-bottom: 0;
   }
 
+  .phone {
+    width: 24px;
+    height: 23px;
+  }
   .phone-groupe {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  }
+  .phone-number {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+  }
+
+  .logo {
+    width: 128px;
+    height: 45px;
+  }
+  .logo-footer {
+    margin: 0 203px 0 0;
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px), screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px), screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
@@ -1979,8 +1995,5 @@ a {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
 }/*# sourceMappingURL=main.css.map */
