--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h3 class="subtitle">tradition and love</h3>
     <h2 class="title">how it’s made?</h2>
-    <picture>
+    <!-- <picture>
       <source
         srcset="
           ../images/manufacture/home-pic4-desktop.png    1x,
@@ -25,7 +25,7 @@
         src="../images/manufacture/home-pic4-mobile.png"
         alt="cow and milk"
       />
-    </picture>
+    </picture> -->
 
     <p>
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
