--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,28 +1,35 @@
-<footer class="footer container">
-    <div class="footer-address">
-    <a class="footer-logo-link link" href="#" aria-label="логотип сайта">
-        <span class="logo-left">Hell</span>
-        <svg class="footer-logo-icon" width="15px" hight="20px">
-            <use href="./images/sprite.svg#icon-campfire_logo"></use>
-        </svg>
-        <span class="logo-right">EN</span>
-    </a>
+<footer class="footer">
+    <div class="footer-address container">
+        <div class="footer-logo"><a class="footer-logo-link link" href="#" aria-label="логотип сайта">
+            <span class="footer-logo-left">Hell</span>
+            <svg class="footer-logo-icon" width="15px" hight="20px">
+                <use href="./images/sprite.svg#icon-campfire_logo"></use>
+            </svg>
+            <span class="footer-logo-right">EN</span>
+        </a>
+    
     <p class="footer-logo-translate">
         <span class="footer-logo-text">АДСКИЙ</span>  АНГЛИЙСКИЙ
     </p>
-    <div class="footer-logo-container">
-        <a class="footer-contact-tel link" href="tel:+380000000000">
-            <svg class="footer-icon-phone" width="20px" hight="19px">
-                <use href="./images/sprite.svg#icon-phone"></use>
-            </svg>+38 (000) 000 00 00
+        </div>
+        
+        <div class="footer-logo-container">
+            <a class="footer-contact-tel link" href="tel:+380000000000">
+                <svg class="footer-icon-phone">
+                    <use href="./images/sprite.svg#icon-phone"></use>
+                </svg><span class="footer-vertical-text">+38 (000) 000 00 00</span>
+            </a>
+        </div>
+        
+        <a class="footer-instagram link" href="#">
+            <img class="footer-icon-instagram" src="./images/svg/instagram.svg" width="40px" hight="40px" />
         </a>
+        
     </div>
-    
-    <a class="footer-instagram link" href="#">
-        <img class="footer-icon-instagram" src="./images/svg/instagram.svg" width="40px" hight="40px" />
-    </a></div>
+   
     <div class="footer-security">
-        <p class="footer-security-text">@ Все права защищены, 2019</p> 
+        <div class="container"><p class="footer-security-text">@ Все права защищены, 2019</p></div>
+         
     </div>
 
 </footer>
