--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -14,26 +14,45 @@
     color: $primary-text-color;
     align-items: baseline;
   }
+  &-logo-right {
+    margin-left: -4px;
+  }
+  &-logo-left {
+    margin-right: -4px;
+  }
   &-logo-translate {
     font-family: Montserrat;
     font-weight: bold;
     font-size: 5px;
     line-height: 7px;
-    letter-spacing: 0.16em;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primary-text-color;
   }
+
   &-logo-text {
     color: $accent-text-color;
   }
   &-logo-icon {
     width: 15px;
     height: 20px;
+    position: relative;
+    top: 3px;
   }
   &-icon-phone {
     width: 20px;
     height: 19px;
     margin-right: 10px;
+    position: absolute;
+    top: -2px;
+    left: -30px;
+    fill: $accent-text-color;
+    &:hover,
+    &:focus {
+      cursor: pointer;
+      color: $dark-background;
+      fill: $dark-background;
+    }
   }
   &-contact-tel {
     font-family: Montserrat;
@@ -42,6 +61,14 @@
     line-height: 1.21;
     letter-spacing: 0.08em;
     color: $primary-text-color;
+    position: relative;
+
+    &:hover,
+    &:focus {
+      cursor: pointer;
+      color: $accent-text-color;
+      fill: $accent-background;
+    }
   }
   &-logo-container {
     display: flex;
@@ -49,15 +76,15 @@
     margin-bottom: 31px;
     align-items: center;
     justify-content: center;
-  }
-  &-instagram {
-    justify-content: center;
-    //margin-right: 120px;
-    //margin-left: 120px;
+    &:hover,
+    &:focus {
+      cursor: pointer;
+      color: $accent-text-color;
+      fill: $accent-background;
+    }
   }
   &-security {
     background-color: $dark-background;
-    background-size: 320px 70px;
     padding-top: 21px;
     padding-bottom: 21px;
     &-text {
@@ -69,6 +96,103 @@
     }
   }
 }
-img {
+img.footer-icon-instagram {
   display: inline;
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-address {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-logo {
+    justify-content: center;
+    height: 45px;
+    position: absolute;
+
+    &-container {
+      height: 45px;
+      margin-left: 365px;
+      margin-bottom: 0px;
+      align-items: center;
+      margin-top: 0px;
+    }
+  }
+  .footer-logo-link {
+    font-size: 26px;
+    line-height: 1.23;
+    letter-spacing: 0.04em;
+  }
+  .footer-logo-translate {
+    font-size: 8px;
+    line-height: 1.25;
+    letter-spacing: 0.18em;
+  }
+  .footer-logo-icon {
+    width: 22px;
+    height: 30px;
+    position: relative;
+    top: 5px;
+  }
+  .footer-icon-phone {
+    width: 24px;
+    height: 23px;
+    margin-right: 10px;
+    position: absolute;
+    top: 1px;
+    left: -34px;
+  }
+  .footer-contact-tel {
+    font-size: 20px;
+    line-height: 1.2;
+    position: relative;
+  }
+  .footer-instagram {
+    border-left: 1px solid $secondary-text-color;
+    padding-left: 24px;
+  }
+  .footer-icon-instagram {
+    padding-top: 3px;
+  }
+  .footer-security {
+    text-align: start;
+  }
+  .footer-logo-right {
+    margin-left: -5px;
+  }
+  .footer-logo-left {
+    margin-right: -5px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .footer-address {
+    padding-top: 52px;
+    padding-bottom: 52px;
+  }
+  .footer-contact-tel {
+    font-size: 30px;
+    line-height: 1.23;
+    position: relative;
+  }
+  .footer-icon-phone {
+    width: 30px;
+    height: 29px;
+    top: 4px;
+    left: -43px;
+    //padding-right: 24px;
+  }
+  .footer-instagram {
+    margin-right: 410px;
+  }
+  .footer-icon-instagram {
+    margin-bottom: -3px;
+  }
+  .footer-logo-container {
+    margin-left: 460px;
+  }
 }
