--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -2,6 +2,10 @@
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: var(--primary-white-color);
+  // & .container {
+  //   margin-left: 0;
+  //   margin-right: 0;
+  // }
 }
 
 .how-do-title {
@@ -72,10 +76,10 @@
   & .skills-text {
     color: var(--primary-white-color);
   }
-}
-.how-do-list-item:hover .how-do-icon,
-.how-do-list-item:focus .how-do-icon {
-  fill: var(--primary-white-color);
+  & .how-do-icon,
+  & .how-do-icon {
+    fill: var(--primary-white-color);
+  }
 }
 
 .how-do-icon {
@@ -93,6 +97,7 @@
     color: var(--title-text-color);
   }
   .how-do-list-item {
+    width: 280px;
     height: 280px;
     margin: 0 auto;
     padding-top: 30px;
