--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -5,27 +5,27 @@
     <!-- <picture>
       <source
         srcset="
-          ../images/manufacture/home-pic4-desktop.png    1x,
-          ../images/manufacture/home-pic4-desktop.png@2x 2x
+          ./images/manufacture/home-pic4-desktop.png    1x,
+          ./images/manufacture/home-pic4-desktop@2x.png 2x
         "
         media="(min-width: 1200px)"
       />
       <source
         srcset="
-          ../images/manufacture/home-pic4-tablet.png    1x,
-          ../images/manufacture/home-pic4-tablet.png@2x 2x
+          ./images/manufacture/home-pic4-tablet.png    1x,
+          ./images/manufacture/home-pic4-tablet@2x.png 2x
         "
         media="(min-width: 768px)"
       />
       <img
         srcset="
-          ../images/manufacture/home-pic4-mobile.png    1x,
-          ../images/manufacture/home-pic4-mobile.png@2x 2x
+          ./images/manufacture/home-pic4-mobile.png    1x,
+          ./images/manufacture/home-pic4-mobile@2x.png 2x
         "
-        src="../images/manufacture/home-pic4-mobile.png"
+        src="./images/manufacture/home-pic4-mobile.png"
         alt="cow and milk"
-      />
-    </picture> -->
+      /> -->
+    </picture>
 
     <p>
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
