update sass + mixin

--- a/css/main.css
+++ b/css/main.css
@@ -33,4 +33,50 @@
   border: 0;
   clip: rect(0 0 0 0);
 }
+
+.footer-title {
+  font-family: Titan One;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.147;
+  text-transform: uppercase;
+  color: #d41443;
+}
+
+.footer-suptitle {
+  font-family: Titan One;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.166;
+  text-transform: uppercase;
+  color: #ffa5ba;
+}
+
+.footer-social-link {
+  display: block;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #fea5bb;
+}
+
+.footer-text-link {
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 186%;
+  color: #000000;
+}
+
+.footer-color-link {
+  color: #d41443;
+}
+
+.footer-text {
+  font-family: DM Sans;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 152%;
+  color: #907e82;
+}
 /*# sourceMappingURL=main.css.map */
