--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,14 @@
 <footer>
-    <p>homemade ice cream made</p>
-    <h4>with passion</h4>
+    <p class="footer-suptitle">homemade ice cream made</p>
+    <h5 class="footer-title">with passion</h5>
 
     <ul>
-        <li><a href="#"></a>GitHub</li>
-        <li><a href="#"></a>Telegramm</li>
-        <li><a href="#"></a>facebook</li>
+        <li><a class="footer-social-link" href="#"></a>GitHub</li>
+        <li><a class="footer-social-link" href="#"></a>Telegramm</li>
+        <li><a class="footer-social-link" href="#"></a>facebook</li>
     </ul>
 
-    <p>Feel free to contact<a href="#"> +61 (0) 383 766 284</a></p>
+    <p class="footer-text-link">Feel free to contact<a class="footer-color-link" href="#"> +61 (0) 383 766 284</a></p>
 
-    <span>© 2019 - IceCream. All Rights Reserved.</span>
+    <span class="footer-text">© 2019 - IceCream. All Rights Reserved.</span>
 </footer>
