--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,9 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-
+@import './utils/mixin';
+@import './utils/variables';
+@import './utils/visually_hidden';
 // Стили для файла с примером HTML-фрагмента
 @import './layout/header';
 @import './layout/hero';
@@ -11,6 +13,3 @@
 @import './layout/review';
 @import './layout/locations';
 @import './layout/footer';
-
-@import './utils/variables';
-@import './utils/visually_hidden';
