--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -6,6 +6,15 @@
 
   & .container {
     position: relative;
+
+    @media screen and (min-width: 1344px) {
+      padding: 0 127px;
+    }
+  }
+
+  @media screen and (min-width: 1344px) {
+    padding-top: 130px;
+    padding-bottom: 130px;
   }
 }
 
@@ -19,9 +28,15 @@
   letter-spacing: 0.03em;
 
   @media screen and (min-width: 768px) and (max-width: 1343px) {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 
     font-size: 26px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    margin-bottom: 30px;
+
+    font-size: 46px;
   }
 }
 
@@ -37,13 +52,20 @@
 
   @media screen and (min-width: 768px) and (max-width: 1343px) {
     display: flex;
-    max-width: 688px;
     margin-bottom: 30px;
-
     padding-top: 40px;
     padding-right: 40px;
     padding-left: 40px;
     padding-bottom: 40px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    display: flex;
+    margin-bottom: 40px;
+    padding-top: 50px;
+    padding-right: 112px;
+    padding-left: 82px;
+    padding-bottom: 51px;
   }
 }
 
@@ -54,6 +76,10 @@
   @media screen and (min-width: 768px) and (max-width: 1343px) {
     margin-right: 46px;
   }
+
+  @media screen and (min-width: 1344px) {
+    margin-right: 40px;
+  }
 }
 
 .reviews-card-img {
@@ -61,6 +87,7 @@
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin: 0 auto;
+    margin-bottom: 20px;
   }
 }
 
@@ -81,9 +108,6 @@
     color: #436eab;
     transform: scale(1.2);
   }
-
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-  }
 }
 
 .reviews-card-icon {
@@ -93,9 +117,13 @@
 .reviews-text-wrapper {
   text-align: center;
 
-  @media screen and (min-width: 768px) and (max-width: 1343px) {
+  @media screen and (min-width: 768px) {
     max-width: 412px;
     text-align: left;
+  }
+
+  @media screen and (min-width: 1344px) {
+    max-width: 706px;
   }
 }
 
@@ -110,9 +138,14 @@
   color: var(--accent-color);
 
   @media screen and (max-width: 768px) and (min-width: 1343px) {
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
     margin-bottom: 20px;
 
     font-size: 20px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    font-size: 30px;
   }
 }
 
@@ -126,8 +159,12 @@
 
   color: var(--secondary-text-color);
 
-  @media screen and (max-width: 768px) and (min-width: 1343px) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    font-size: 14px;
   }
 }
 
@@ -138,6 +175,12 @@
   letter-spacing: 0.08em;
 
   color: var(--additional-text-color);
+
+  @media screen and (min-width: 1344px) {
+    font-size: 18px;
+    line-height: 1.555;
+    letter-spacing: 0.06em;
+  }
 }
 
 .reviews-text-link {
@@ -148,6 +191,12 @@
   letter-spacing: 0.08em;
 
   color: var(--accent-color);
+
+  @media screen and (min-width: 1344px) {
+    font-size: 18px;
+    line-height: 1.555;
+    letter-spacing: 0.06em;
+  }
 }
 
 .reviews-slider-set {
@@ -155,7 +204,7 @@
   align-items: center;
   justify-content: space-between;
 
-  @media screen and (min-width: 768px) and (max-width: 1343px) {
+  @media screen and (min-width: 768px) {
     justify-content: space-around;
   }
 }
@@ -165,7 +214,7 @@
   justify-content: space-between;
   width: 182px;
 
-  @media screen and (min-width: 768px) and (max-width: 1343px) {
+  @media screen and (min-width: 768px) {
     width: 558px;
   }
 }
@@ -208,21 +257,33 @@
     color: var(--accent-color);
     transform: scale(1.2);
   }
-}
 
-.btn-left {
-  @media screen and (min-width: 768px) and (max-width: 1343px) {
-    position: absolute;
-    top: 40%;
-    left: 28px;
+  &.btn-left {
+    @media screen and (min-width: 768px) and (max-width: 1343px) {
+      position: absolute;
+      top: 44%;
+      left: 28px;
+    }
+
+    @media screen and (min-width: 1344px) {
+      position: absolute;
+      top: 44%;
+      left: 28px;
+    }
   }
-}
 
-.btn-right {
-  @media screen and (min-width: 768px) and (max-width: 1343px) {
-    position: absolute;
-    top: 40%;
-    right: 28px;
+  &.btn-right {
+    @media screen and (min-width: 768px) and (max-width: 1343px) {
+      position: absolute;
+      top: 44%;
+      right: 60px;
+    }
+
+    @media screen and (min-width: 1344px) {
+      position: absolute;
+      top: 44%;
+      right: 60px;
+    }
   }
 }
 
