reviews  tablet /desctop

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,19 +1,16 @@
 <section class="reviews">
     <div class="container">
         <div class="reviews-foto">
-                 <!--
-                         <picture>
-                        <source srcset="../images/reviews/review-foto-1.webp" type="image/webp"/>
-                        <img src="../images/reviews/review-foto-1.jpg"
-                            alt="Фото клиента">
-                    </picture>
-                 -->
+            <picture>
+                <source srcset="./images/reviews/review-foto-1.webp" type="image/webp" />
+                <img src="./images/reviews/review-foto-1.jpg" alt="Фото клиента">
+            </picture>
         </div>
-        <div class="reviews-commit"> 
-            <div class="i">
-                <svg>
-                    <use href="./images/reviews/icon.svg#icon-quotes"></use>
-                </svg>
+        <div class="reviews-commit">
+            <svg>
+                <use href="./images/reviews/icon.svg#icon-quotes"></use>
+            </svg>
+            <div class="i">                
                 <p>Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
                 congue. Lorem ipsum primis in nibh vel risus.</p>
             </div>
