--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -1,7 +1,16 @@
 .reviews {
   padding-top: 80px;
-  background-color: getColor(white-color);
   padding-bottom: 86px;
+  @media screen and (min-width: 768px) {
+    padding-top: 121px;
+    padding-bottom: 119px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 123px;
+    padding-bottom: 132px;
+  }
+  background-color: getColor(white-color);
   text-align: center;
 }
 .reviews-foto {
@@ -9,12 +18,13 @@
   height: 85px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url('../images/reviews/review-foto-1.jpg');
+  background-color: #e1e1e1;
+  border-radius: 50%;
 }
 .reviews-commit {
   position: relative;
   background: #fafafa;
-
+  max-width: 280px;
   margin-top: 29px;
   margin-bottom: 30px;
   font-style: normal;
@@ -31,8 +41,30 @@
     z-index: 1;
     left: 61px;
     top: 28px;
+    @media screen and (min-width: 768px) {
+      top: 30px;
+      left: 40px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      top: 32px;
+      left: 50px;
+    }
     width: 54px;
     height: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-top: 19px;
+    margin-bottom: 24px;
+    font-size: 14px;
+    max-width: 620px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 16px;
+    max-width: 926px;
   }
 }
 .i {
@@ -40,11 +72,33 @@
   padding-top: 43px;
   padding-right: 50px;
   padding-bottom: 26px;
+  @media screen and (min-width: 768px) {
+    padding-left: 60px;
+    padding-right: 36px;
+    padding-top: 47px;
+    padding-bottom: 28px;
+  }
 
+  @media screen and (min-width: 1200px) {
+    padding-left: 59px;
+    padding-right: 54px;
+    padding-bottom: 32px;
+  }
   p {
     max-width: 180px;
     padding-left: 7px;
     padding-right: 16px;
+    @media screen and (min-width: 768px) {
+      max-width: 524px;
+      padding-left: 20px;
+      padding-right: 44px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding-left: 28px;
+      padding-right: 35px;
+      max-width: 813px;
+    }
     background-image: repeating-linear-gradient(
       to bottom,
       #ffffff00,
@@ -61,20 +115,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 186%;
 
-  color: #000000;
+  span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 186%;
+    margin-top: 18px;
+    margin-bottom: 30px;
+    color: getColor(black-color);
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      line-height: 168%;
+      margin-top: 14px;
+      margin-bottom: 35px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 15px;
+      font-size: 20px;
+      line-height: 186%;
+    }
+  }
 }
+
 .reviews-name-dots {
   width: 32px;
   height: 4px;
   fill: #c7133e;
-  margin-bottom: 18px;
 }
 .reviews-name-dots-buttom {
-  margin-top: 30px;
   height: 12px;
 }
