Таблетка problems готова

--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -6,6 +6,8 @@
         padding-top: 50px;
         background-color: var(--dark-bg-color);
         margin-bottom: 148px; 
+        margin-left: auto;
+        margin-right: auto;
     }
     .problems__title {
         max-width: 225px;
@@ -87,4 +89,49 @@
     }
 
 }
+@media screen and (min-width:768px){
+    .problems {
+        min-width: 768px;
+        height: 340px;
+        padding-top: 60px;
+        margin-bottom: 150px;
+    }
+    .problems__title {
+        max-width: 444px;
+        font-size: 26px;
+        line-height: 1.307;
 
+        letter-spacing: 0.03em;
+    }
+    .problems__list {
+        width: 668px;
+        height: 303px;
+        padding-top: 30px;
+        padding-right: 47px;
+        padding-bottom: 26px;
+        padding-left: 96px;
+        align-items: flex-start;
+        
+        
+    }
+    .problems__list--item {
+
+        
+        
+        width: 236px;
+        font-size: 14px;
+        line-height: 1.428;
+        margin: 0;
+        vertical-align: top;
+        &:not(:last-child) {
+            margin-bottom: 0px;
+        }
+        &:nth-child(odd) {
+            margin-right: 22px;
+        }
+
+    }
+    .problems__container {
+        top: 55%;
+    }
+}
