--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -2,6 +2,10 @@ header {
   position: relative;
   // background-color: $light-pink-color;
 }
+html {
+  scroll-behavior: smooth;
+}
+
 .container.header {
   position: absolute;
   display: flex;
@@ -60,10 +64,9 @@ header {
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  height: 502px;
+  height: 492px;
   width: inherit;
   padding-top: 60px;
-  filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
   @media (max-width: 1199px) {
     position: fixed;
     z-index: 20;
@@ -75,6 +78,9 @@ header {
     &.is-open {
       display: block;
     }
+  }
+  @media (min-width: 768px) {
+    height: 399px;
   }
   @media (min-width: 1200px) {
     display: flex;
@@ -124,6 +130,11 @@ header {
     font-size: 16px;
     border: none;
     padding: 0%;
+    transition: 250ms;
+    &:hover,
+    &:focus {
+      transform: scale(1.1);
+    }
   }
 }
 
