--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 // @import './layout/header';
 // @import './layout/hero';
 @import './layout/how-we-do-it';
+@import './layout/registration';
 
 // utils
 @import './utils/container';
