--- a/src/partials/manufacture.html
+++ b/src/partials/manufacture.html
@@ -25,7 +25,7 @@
         src="./images/manufacture/home-pic4-mobile.png"
         alt="cow and milk"
       /> -->
-    </picture>
+    <!-- </picture> -->
 
     <p>
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
