Изменяет стили героя

--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -1,6 +1,13 @@
 .page-hero{
-    position: absolute;
-    top: 109.5;
+    height: 618px;
+    padding-top: 50px;
+    padding-bottom: 47px;
+}
+
+.page-hero .container{
+    /*   position: absolute;
+    top: 120;
+    left: 0;  */
     background-image: url('../images/hero/hero-wave-mobile.png');
 }
 
@@ -69,15 +76,25 @@
 
 @media screen and (min-width: 768px){
     .page-hero{
-        position: absolute;
-        top: 109.5;
-        left: 0;
-        background-image: url('../images/hero/hero-wave-tablet.png');
+        position: relative;
+        padding-top: 70px;
+        padding-bottom: 114px;
+        height: 557px;
+    }
+
+    .page-hero .container{
+        position: relative;
     }
 
     .hero-title{
         font-size: 26px;
         line-height: 1.307;
+        max-width: 315px;
+    }
+
+    .hero-text-wrapper{
+        display: flex;
+        flex-direction: column;
     }
 
     .hero-btn-wrapper{
@@ -85,24 +102,34 @@
     }
 
     .hero-bg{
-        width: 375.75px;
-        height: 320.64px;
+        position: absolute;
+        top: 0;
+        left: 374px;
+        width: 390px;
+        height: 321px;
     
         background-image: url('../images/hero/hero-bg-tablet.png');
     }
 }
 
 @media screen and (min-width: 1344px){
-        .page-hero{
-        position: absolute;
-        top: 109.5;
-        left: 0;
+    .page-hero{
+        padding-top: 125px;
+    }
+
+    .page-hero .container{
         background-image: url('../images/hero/hero-wave-desktop.png');
     }
 
     .hero-title{
         font-size: 58px;
         line-height: 1.293;
+        max-width: 642px;
+    }
+
+    .hero-text-wrapper{
+        display: flex;
+        flex-direction: row;
     }
 
     .hero-btn{
@@ -117,7 +144,9 @@
 
     .hero-bg{
         width: 841.55px;
-        height: 602.24px;
+        height: 718px;
+        top: -77px;
+        left: 792px;
     
         background-image: url('../images/hero/hero-bg-desktop.png');
     }
