--- a/src/partials/page-hero.html
+++ b/src/partials/page-hero.html
@@ -1,7 +1,7 @@
 <section class="page-hero">
     <div class="container">
         <h1 class="hero-title">Комплексная подготовка к ВНО по английскому языку</h1>
-        <p class="hero-text"><span class="hero-text-grey">Просто не будет.</span> Но ты гарантировано наберешь <span class="hero-text-accent">+25 баллов</span></p>
+        <p class="hero-text"><span class="hero-text-grey">Просто не будет.</span><span class="hero-text-wrapper">Но ты гарантировано наберешь <span class="hero-text-accent">+25 баллов</span></p>
         <div class="hero-btn-wrapper">
             <button class="hero-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
         </div>
