--- a/src/sass/components/_how-made.scss
+++ b/src/sass/components/_how-made.scss
@@ -1,9 +1,19 @@
 .how-made {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 	background: #FFF5F6;
 	padding: 125px 0px 97px 0px;
 	z-index: -1;
+	@media screen and (min-width:768px) {
+		padding: 130px 0px 142px 0px;
+	}
+	@media screen and (min-width:1200px) {
+		// width: 100%;
+		padding: 125px 0px 139px 0px;
+	}
 }
-
+//+
 .hw-title {
 	margin: 0 0 15px 0;
 
@@ -15,8 +25,17 @@
 	text-transform: uppercase;
 
 	color: getColor(accent);
-}
 
+	@media screen and (min-width:768px) {
+		font-size: 26px;
+		line-height: 1.15;
+	}
+	@media screen and (min-width:1200px) {
+		font-size: 30px;
+		line-height: 1.13;
+	}
+}
+//+
 .hw-subtitle {
 	margin: 0;
 
@@ -29,16 +48,45 @@
 	text-transform: uppercase;
 
 	color: getColor(title);
+	@media screen and (min-width:768px) {
+		font-size: 48px;
+	}
+	@media screen and (min-width:1200px) {
+		font-size: 58px;
+		line-height: 1.14;
+		letter-spacing: 0.06em;
+	}
 }
-
+//+
 .hw-title-box {
 	margin-bottom: 26px;
+	color: getColor(title);
+	@media screen and (min-width:768px) {
+		margin-bottom: 50px;
+	}
+	@media screen and (min-width:1200px) {
+		margin-bottom: 55px;
+	}
 }
-
+//+------------------
 .hw-content-box {
-	margin-bottom: 39px;
-}
 
+	margin-bottom: 39px;
+	@media screen and (min-width:768px) {
+		display: flex;
+		margin-bottom: 66px;
+		padding: 0 2px 0 5px;
+	}
+	@media screen and (min-width:1200px) {
+		width: 1050px;
+		position: relative;
+		z-index: 5;
+		margin-bottom: 39px;
+		// padding: 0 42px 0 37px;
+		padding: 0;
+	}
+}
+// ----------------------------
 .hw-main-content {
 	max-width: 220px;
 	margin-left: auto;
@@ -49,17 +97,41 @@
 	font-size: 12px;
 	line-height: 1.62;
 
+	@media screen and (min-width:768px) {
+		max-width: 340px;
+		margin: 50px 0 0 17px;
+		font-size: 14px;
+		line-height: 1.76;
+	}
+	@media screen and (min-width:1200px) {
+		max-width: 463px;
+		margin: 50px 0 0 17px;
+		font-size: 16px;
+		line-height: 1.76;
+		letter-spacing: 0.04em;
+	}
 }
-.a111 {
+// -------------------------
+.hw-main-content-1 {
 	margin: 0;
 }
-.a222 {
+.hw-main-content-2 {
 	margin: 30px 0 0 0;
-	color: getColor(secondary-text)
+	color: getColor(secondary-text);
+	@media screen and (min-width:1200px) {
+		margin: 30px 0 0 0;
+		font-size: 14px;
+		line-height: 1.94;
+	}
 }
-.a333 {
+.hw-main-content-3 {
+	@media screen and (min-width:1200px) {
+		margin: 30px 0 0 0;
+		font-size: 14px;
+		line-height: 1.94;
+	}
 	margin: 33px 0 0 0;
-	color: getColor(secondary-text)
+	color: getColor(secondary-text);
 }
 .hw-btn {
 	display: flex;
@@ -82,6 +154,15 @@
 	color: getColor(title);
 	background: getColor(white-color);
 	border-radius: 22px;
+
+	@media screen and (min-width:768px) {
+
+		margin-top: 62px;
+
+	}
+	@media screen and (min-width:1200px) {
+		margin-top: 45px;
+	}
 
 	cursor: pointer;
 	transition-property: background;
@@ -107,11 +188,31 @@
 	li:not(:last-child) {
 		margin-bottom: 38px;
 	}
-}
+	@media screen and (min-width: 768px) {
+		max-width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
 
+}
+//+
 .hw-card {
+	@media screen and (min-width: 768px) {
+		width: 180px;
+	}
+	@media screen and (min-width: 1200px) {
+		width: 330px;
+	}
+
 	img {
 		margin-bottom: 16px;
+
+		@media screen and (min-width: 768px) {
+			margin-bottom: 36px;
+		}
+		@media screen and (min-width: 1200px) {
+			margin-bottom: 40px;
+		}
 	}
 	
 	p {
@@ -124,35 +225,71 @@
 		text-transform: uppercase;
 
 		color: getColor(title);
+
+		@media screen and (min-width: 768px) {
+			font-size: 48px;
+		}
+		@media screen and (min-width: 1200px) {
+			font-size: 58px;
+		}
 	}
 	b {
 		font-size: 12px;
 		line-height: 1.7;
+		@media screen and (min-width: 768px) {
+			font-size: 14px;
+			line-height: 1.74;
+		}
+		@media screen and (min-width: 1200px) {
+			font-size: 16px;
+			line-height: 1.76;
+		}
 	}
 }
-
+//+
 .how-made .container {
 	position: relative;
 }
 
-
+// +-
 .cow-spray-bg {
-	position: absolute;
-	left: -20px;
-	top: 641px;
-	width: 320px;
-	height: 133px;
-
-	z-index: 0;
-	background-image: url(../images/how-made-img/bg-milk-sprays-mobile.png);
-	@media screen and (min-device-pixel-ratio: 2),
-	screen and (min-resolution: 192dpi),
-	screen and (min-resolution: 2dppx) {
-		background-image: url(../images/how-made-img/bg-milk-sprays-mobile@2x.png);
+	@media screen and (max-width:767px) {
+		position: absolute;
+		left: -20px;
+		top: 641px;
+		width: 320px;
+		height: 133px;
+	
+		z-index: 0;
+		background-image: url(../images/how-made-img/bg-milk-sprays-mobile.png);
+		@media screen and (min-device-pixel-ratio: 2),
+		screen and (min-resolution: 192dpi),
+		screen and (min-resolution: 2dppx) {
+			background-image: url(../images/how-made-img/bg-milk-sprays-mobile@2x.png);
+		}
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-position: center;
 	}
-	background-repeat: no-repeat;
-	background-size: contain;
-	background-position: center;
+	@media screen and (min-width:1200px) {
+		//  скорегувати top пысля завершення десктопу
+		position: absolute;
+		left: -157px;
+		top: 217px;
+		width: 1282px;
+		height: 534px;
+	
+		z-index: 0;
+		background-image: url(../images/how-made-img/bg-milk-sprays-desktop.png);
+		@media screen and (min-device-pixel-ratio: 2),
+		screen and (min-resolution: 192dpi),
+		screen and (min-resolution: 2dppx) {
+			background-image: url(../images/how-made-img/bg-milk-sprays-desktop@2x.png);
+		}
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-position: center;
+	}
 }
 
 
