--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -39,17 +39,18 @@
         <h2 class="comments__title">Отзывы выпускников</h2>
         <div class="comments__container">
             <ul class="comments-list list">
-                <li class="comments-list__main-foto">
-                    <img class="comments-main-foto__main-foto" src="./images/comments/tonya_kucherovskaya.png"
-                        width="90" height="90" alt="фото Тоня Кучерявская">
-                </li>
+                <div class="conta">
+                    <li class="comments-list__main-foto">
+                        <img class="comments-main-foto__main-foto" src="./images/comments/tonya_kucherovskaya.png"
+                            width="90" height="90" alt="фото Тоня Кучерявская">
+                    </li>
 
-                <li class="comments-list__icon">
-                    <svg class="comments-list-icon__vk">
-                        <use href="./images/sprite.svg#icon-vk"></use>
-                    </svg>
-                </li>
-
+                    <li class="comments-list__icon">
+                        <svg class="comments-list-icon__vk">
+                            <use href="./images/sprite.svg#icon-vk"></use>
+                        </svg>
+                    </li>
+                </div>
                 <li class="comments-list__item">
                     <h3 class="comments-list__name">Тоня Кучеровская</h3>
                     <p class="comments-list__info">
