phone version fixed

--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -26,7 +26,7 @@
             <li class="location-cards">
                 <h3 class="location-institution-truck">food truck</h3>                 
                 <h4 class="location-town">Los Angeles</h4>
-                <p class="location-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="location-description">You can taste the most delicious ice cream here</p>
                 <ul class="location-shedule">
                     <li class="location-shedule-item">
                         <p class="location-shedule-days">Monday - Friday</p>
@@ -47,7 +47,7 @@
             <li class="location-cards">
                 <h3 class="location-institution-cafe">CAFE</h3>                 
                 <h4 class="location-town">New York</h4>
-                <p class="location-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="location-description">You can taste the most delicious ice cream here</p>
                 <ul class="location-shedule">
                     <li class="location-shedule-item">
                         <p class="location-shedule-days">Monday - Friday</p>
