--- a/src/sass/components/locations/_locations.scss
+++ b/src/sass/components/locations/_locations.scss
@@ -3,13 +3,13 @@
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 56.5px;
-    text-align: left;
+    text-align: center;
     background: $tradition-background-color;
 }
 
 .location-container {
     display: inline-block;
-    margin-top: -84px;
+    margin-top: 84px;
     max-width: 480px;
     padding: 0 50px;
 
@@ -28,10 +28,9 @@
 
 
 .location-cards {
-    max-width: 220px;
-
-    margin-left: 50px;
-    margin-right: 50px;
+    width: 100%;
+    padding: 43px 20px;
+    text-align: left;
 
     background: $main-white-color;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
@@ -201,8 +200,8 @@
     }
 }
 
-location-phone,
-location-mail {
+.location-phone,
+.location-mail {
     text-decoration: none;
 
     font-size: 12px;
@@ -210,7 +209,7 @@ location-mail {
     font-weight: 500;
     color: $main-grey-color;
     font-style: normal;
-    transition: 0.15s cubic-bezier(0.4,0,0.2,1);
+    
 
     @media screen and (min-width: $tablet) {
         font-size: 14px;
