hero desktop ready

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,15 +5,14 @@
         </h1>
         <div class="hero-promise">
             <p class="hero-promise-one">Просто не будет.</p>
-            <p class="hero-promise-two">Но ты гарантировано наберешь</p>
-            <p class="hero-promise-three">+25 баллов</p>
+            <p class="hero-promise-two">Но ты гарантировано наберешь <span class="hero-promise-three">+25 баллов</span></p>
         </div>
         <button class="hero-button" type="button" data-modal-open>
             хочу бесплатное занятие
         </button>
         <picture>
             <source srcset="./images/hero/png/header-desktop.png 1x, ./images/hero/png/header-desktop@2x.png 2x"
-                media="(min-width: 1200px)" type="image/png">
+                media="(min-width: 1344px)" type="image/png">
             <source srcset="./images/hero/png/header-tablet.png 1x, ./images/hero/png/header-tablet@2x.png 2x"
                 media="(min-width: 768px)" type="image/png">
             <source srcset="./images/hero/png/header-mobile.png 1x, ./images/hero/png/header-mobile@2x.png 2x"
