--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -25,6 +25,8 @@
   }
 
   &-promise {
+    display: block;
+    max-width: 332px;
     margin-bottom: 30px;
 
     font-style: normal;
@@ -109,11 +111,14 @@
     }
 
     &-title {
-      width: 332px;
-      font-style: normal;
+      width: 316px;
       font-weight: 800;
       font-size: 26px;
-      line-height: 1.307;
+      line-height: 1.3;
+    }
+
+    &-promise {
+      max-width: 308px;
     }
 
     &-button {
@@ -123,8 +128,85 @@
     &-picture {
       position: absolute;
       top: 172px;
-      right: 18px;
+      left: 332px;
       margin: 0;
+    }
+
+    &-advantage-list {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &-advantage-item {
+      &:not(:last-child) {
+        margin-bottom: 0px;
+      }
+    }
+
+    &-advantage-picture {
+      display: block;
+      margin-right: 15px;
+      width: 59px;
+      height: 60px;
+    }
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .hero {
+    &-container {
+      padding-top: 228px;
+      padding-bottom: 130px;
+
+      background-image: url('../images/hero/png/wave-desktop.png');
+      background-size: 1680px 992px;
+    }
+
+    &-title {
+      margin-bottom: 24px;
+
+      width: 642px;
+      font-size: 58px;
+    }
+
+    &-promise {
+      //   max-width: 308px;
+      margin-bottom: 40px;
+
+      font-style: normal;
+      font-size: 20px;
+      line-height: 1.649;
+
+      &-one {
+        font-weight: 500;
+        color: $secondary-text-color;
+      }
+
+      &-two {
+        font-weight: bold;
+        color: $primary-text-color;
+      }
+      &-three {
+        font-weight: bold;
+        color: $accent-text-color;
+      }
+    }
+
+    &-button {
+      max-width: 354px;
+      height: 70px;
+      padding: 0 25px;
+      margin: 0 0 241px 0;
+
+      font-size: 14px;
+      line-height: 1.215;
+      letter-spacing: 0.14em;
+    }
+
+    &-picture {
+      position: absolute;
+      top: 150px;
+      left: 609px;
     }
 
     &-advantage-list {
@@ -135,28 +217,28 @@
     &-advantage-item {
       display: flex;
 
+      align-items: center;
+
       &:not(:last-child) {
-        margin-bottom: 30px;
+        margin-bottom: 0px;
       }
 
       p {
-        display: block;
-        width: 142px;
-        height: 60px;
+        width: 366px;
+        height: 66px;
 
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 1.428;
+        font-size: 20px;
+        line-height: 1.649;
         letter-spacing: 0.08em;
         color: $primary-text-color;
       }
     }
+
     &-advantage-picture {
       display: block;
-      margin-right: 15px;
-      width: 59px;
-      height: 60px;
+      margin-right: -18px;
+      width: 100px;
+      height: 102px;
     }
   }
 }
