--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -1,13 +1,12 @@
 .page-hero{
     height: 618px;
-    padding-top: 50px;
-    padding-bottom: 47px;
 }
 
 .page-hero .container{
-    /*   position: absolute;
-    top: 120;
-    left: 0;  */
+    position: absolute;
+    top: 120px; 
+    padding-top: 50px;
+    padding-bottom: 47px;
     background-image: url('../images/hero/hero-wave-mobile.png');
 }
 
@@ -76,14 +75,15 @@
 
 @media screen and (min-width: 768px){
     .page-hero{
-        position: relative;
-        padding-top: 70px;
-        padding-bottom: 114px;
         height: 557px;
     }
 
     .page-hero .container{
-        position: relative;
+        position: absolute;
+        padding-top: 70px;
+        padding-bottom: 114px;
+
+        background-image: url('../images/hero/hero-wave-tablet.png');
     }
 
     .hero-title{
@@ -118,8 +118,13 @@
     }
 
     .page-hero .container{
+        position: absolute;
+        padding-top: 70px;
+        padding-bottom: 114px;
+
         background-image: url('../images/hero/hero-wave-desktop.png');
     }
+
 
     .hero-title{
         font-size: 58px;
