--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -55,7 +55,64 @@
   }
 }
 
-@media screen and(min-width: 767px) {
+@media screen and(min-width: 767px) and(max-width: 1344px) {
+  .hero {
+    position: relative;
+    display: flex;
+    margin-top: 70px;
+    .hero-text-box {
+      max-width: 270px;
+      .hero-title {
+        font-style: normal;
+        font-weight: 800;
+        font-size: 23px;
+        line-height: 34px;
+        letter-spacing: 0.03em;
+      }
+      .hero-text {
+        margin-top: 30px;
+
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 22px;
+        letter-spacing: 0.1em;
+
+        .secondary-text {
+          color: var(--secondary-text-color);
+        }
+        .accent {
+          color: var(--accent-color);
+        }
+      }
+      .hero-button {
+        display: block;
+        margin-top: 30px;
+
+        outline: none;
+        min-width: 260px;
+        padding: 14px;
+        border: none;
+
+        color: var(--white-text-color);
+        background-color: var(--accent-color);
+      }
+      background-image: url('../images/hero/bgline-tablet.png');
+      background-repeat: no-repeat;
+    }
+    .hero-images {
+      position: absolute;
+      right: 0;
+      top: 0;
+      display: flex;
+      justify-content: right;
+    }
+    background-image: url('../images/hero/bgline-tablet.png');
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+  }
+}
+@media screen and(min-width: 1344px ) {
   .hero {
     position: relative;
     display: flex;
