--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -604,6 +604,25 @@ header {
   }
 }
 
+.description-list .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.description-svg {
+  display: block;
+  border: 2px #212122 solid;
+  padding: 10px 12px;
+  width: 58px;
+  height: 60px;
+}
+
 body {
   font-family: var(--primary-font);
   color: var(--title-text-color);
