--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -170,7 +170,7 @@
     }
 
     &-promise {
-      //   max-width: 308px;
+      max-width: 537px;
       margin-bottom: 40px;
 
       font-style: normal;
