в секцию мигаранируем добавил иконки

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,16 +1,16 @@
 <section class="feedback__section">
-    <div class="feedback__conteiner conteiner">
+    <div class="feedback__container container">
         <h2 class="feedback__section-title">
             Отзывы выпускников
         </h2>
-        <div class="feedback__conteiner conteiner">
+        <div class="feedback__container container">
             <button type="button" class="left__button">
                 <svg width="25px" height="5px">
                     <use href="/images/icons/icons-sprite.svg#icon-strelkavlevo"></use>
                 </svg>
             </button>
-            <div class="slide__conteiner">
-                <div class="photo-and-icon__conteiner">
+            <div class="slide__container">
+                <div class="photo-and-icon__container">
                     <picture>
                         <source media="(min-width: 768px)"
                             srcset="./images/slider/slider-tablet6-min.jpg 1x, ./images/slider/slider-tablet6@2x-min.jpg 2x">
@@ -23,7 +23,7 @@
                         <use href="/images/icons/icons-sprite.svg#icon-vk"></use>
                     </svg>
                 </div>
-                <div class="person__conteiner">
+                <div class="person__container">
                     <h3 class="person__title">Тоня Кучеровская</h3>
 
                     <p>
@@ -51,7 +51,7 @@
                     <use href="/images/icons/icons-sprite.svg#icon-strelkavpravo"></use>
                 </svg>
             </button>
-            <div class="small-icon__conteiner">
+            <div class="small-icon__container">
                 <picture>
                     <source media="(min-width: 320px)"
                         srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
