--- a/src/sass/components/_feedback.scss
+++ b/src/sass/components/_feedback.scss
@@ -27,7 +27,7 @@
   display: block;
 }
 
-.photo-and-icon__conteiner {
+.photo-and-icon__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,13 +36,13 @@
   }
 }
 
-.person__conteiner {
+.person__container {
   padding-left: 20px;
   padding-right: 20px;
 }
 
 @media screen and (min-wdth: 320px) {
-  .feedback__conteiner {
+  .feedback__container {
     padding-top: 20px;
     padding-right: 20px;
     padding-left: 20px;
