--- a/src/sass/components/_guarantee.scss
+++ b/src/sass/components/_guarantee.scss
@@ -5,8 +5,25 @@
     padding-top: 130px;
   }
 }
-.guarantee__conteiner {
+.guarantee__container {
+  width: 100%;
+  margin: 0 auto;
   background: #f1f1f1;
+
+  max-width: 320px;
+  padding-left: 27.5px;
+  padding-right: 27.5px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  @media screen and (min-width: 1344px) {
+    max-width: 1344px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .orange__text {
@@ -35,14 +52,32 @@
 }
 
 .guarantee__list-item {
+  padding-left: 27.5px;
+  position: relative;
   font-family: Montserrat, sans-serif;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.666;
   color: #3d3d3d;
+}
 
-  ::before {
-    content: '';
+.left__border {
+  border-left: 1px dashed #b9b9b9;
+}
+
+.svg_container {
+  display: flex;
+  position: absolute;
+  top: 0px;
+  left: -11.5px;
+  width: 23px;
+  height: 40px;
+  background: #f1f1f1;
+}
+@media screen and (min-wdth: 768px) {
+  .svg_container {
+    width: 15px;
+    height: 30px;
   }
 }
 .guarantee__list-item + .guarantee__list-item {
